hard-gists/966387/run.log
=== Docker Run Log for 966387 ===
Started at: Mi 29. Okt 18:29:06 CET 2025

[2025-10-29 18:29:07] START: Running container for 966387
[2025-10-29 18:29:07] SUCCESS: Container 4ffb0d985c4fb2d7a0bf748d7ba7fb145bf6546d4459ab747a49598170868d09 started for 966387
=== Container logs for 966387 ===
  File "/snippet.py", line 30
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 966387 ===
[2025-10-29 18:29:09] INFO: Container 4ffb0d985c4fb2d7a0bf748d7ba7fb145bf6546d4459ab747a49598170868d09 has stopped
